<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     *
     * @return void
     */
    public function up()
    {
        Schema::create('affectation_projets', function (Blueprint $table) {
            $table->id();
            $table->date('date_debut');
            $table->date('date_fin')->nullable(); // Peut être NULL si l'affectation est en cours
            $table->foreignId('annee_formation_id')->constrained('annee_formations');
            $table->foreignId('groupe_id')->constrained('groupes');
            $table->foreignId('projet_id')->constrained('projets');
            $table->longText('description')->nullable();
            $table->string('reference')->unique();
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     *
     * @return void
     */
    public function down()
    {
        Schema::dropIfExists('affectation_projets');
    }
};
